Propagate the decoder frame premul info to SkBitmap

Currently ImageFrame always sets up the resulting SkBitmap as
kPremul_SkAlphaType (or kOpaque_SkAlphaType in some cases), even
when AlphaOption == AlphaNotPremultiplied.

Update to set the correct bitmap alpha type.

R=noel@chromium.org,reed@google.com,xidachen@chromium.org
BUG=597035

Review URL: https://codereview.chromium.org/1820733004

Cr-Commit-Position: refs/heads/master@{#382680}

Former-commit-id: 18a861d65e82a16f8cfbc7d3f160cfb3746523e2